--- a/FTCollectorApp/View/SitesPage/CabinetSitePageView.xaml
+++ b/FTCollectorApp/View/SitesPage/CabinetSitePageView.xaml
@@ -173,7 +173,9 @@
                         <Button Text="Record Racks" IsEnabled="False" HorizontalOptions="FillAndExpand" Command="{Binding ShowRackPageCommand}" />
                         <Button Text="Active Device" IsEnabled="False" HorizontalOptions="FillAndExpand" Command="{Binding ShowActiveDevicePageCommand}"/>
                         <Button Text="Save and Continue" HorizontalOptions="FillAndExpand"  Command="{Binding SaveContinueCommand}"/>
-                    </StackLayout>
+                        <Button Text="Return to Main Menu" HorizontalOptions="FillAndExpand"  Command="{Binding ReturnToMainCommand}"/>
+
+                </StackLayout>
 
                 </ScrollView>
             </StackLayout>
