--- a/FTCollectorApp/View/SitesPage/StructureSitePageView.xaml
+++ b/FTCollectorApp/View/SitesPage/StructureSitePageView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FTCollectorApp.Utils"
-             x:Class="FTCollectorApp.View.SitesPage.BuildingSitePageView">
+             x:Class="FTCollectorApp.View.SitesPage.StructureSitePageView">
     <ContentPage.ToolbarItems>
         <ToolbarItem  Command="{Binding CaptureCommand}" IconImageSource="cam_white.png" 
                  Order="Primary"
@@ -14,46 +14,22 @@
         <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
             <ScrollView>
                 <StackLayout Padding="20" VerticalOptions="CenterAndExpand">
-                    <Label Text="Building" FontSize="Large" HorizontalOptions="Center"/>
+                    <Label Text="Structure" FontSize="Large" HorizontalOptions="Center"/>
                     <Label Text="Site Type*" HorizontalOptions="Start"/>
                     <local:BorderColorEntry IsReadOnly="True" Text="{Binding SiteType}" IsEnabled="False" HorizontalOptions="FillAndExpand"/>
                     <Label Text="Enter PCS tag number*" HorizontalOptions="Start"/>
                     <local:BorderColorEntry IsReadOnly="True" Text="{Binding TagNumber}" IsEnabled="False" HorizontalOptions="FillAndExpand"/>
-                    <Label Text="Owner or Customer" HorizontalOptions="Start"/>
-                    <local:BorderColorEntry IsReadOnly="True" Text="{Binding OwnerName}"   HorizontalOptions="FillAndExpand"/>
+                    <Label Text="Pole ID" HorizontalOptions="Start"/>
+                    <local:BorderEntry Text="{Binding PoleID, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
+                    
                     <Label Text="Enter owners tag number" HorizontalOptions="Start"/>
                     <local:BorderEntry Text="{Binding OwnerTagNumber, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
-                    <Label Text="Enter Property Id" HorizontalOptions="Start"/>
+                    <!--<Label Text="Enter Property Id" HorizontalOptions="Start"/>
                     <local:BorderEntry Text="{Binding PropertyId, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
                     <Label Text="Enter site name" HorizontalOptions="Start"/>
-                    <local:BorderEntry Text="{Binding SiteName, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
-                    <Label Text="Enter Street Address" HorizontalOptions="Start"/>
-                    <local:BorderEntry Text="{Binding StreetAddress, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
-                    <Label Text="Enter Postal Code" HorizontalOptions="Start"/>
-                    <local:BorderEntry Text="{Binding PostalCode, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>
-
-                    <Grid Padding="0,5,10,5" RowDefinitions="*,*,*,*" ColumnDefinitions="*,*,*">
-                        <Label Grid.Row="0" Grid.Column="0"  Text="Lane closure required"/>
-                        <Label Grid.Row="0" Grid.Column="1" Text="Enter the dot disctrict"/>
-                        <Label Grid.Row="0" Grid.Column="2" Text="Has Power disconnect"/>
-                        <local:Dropdown Grid.Row="1" Grid.Column="0" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsLaneClosure, Mode=TwoWay}"/>
-                        <local:Dropdown Grid.Row="1" Grid.Column="1" 
-                                            ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedDistrict, Mode=TwoWay}" />
-                        <local:Dropdown Grid.Row="1" Grid.Column="2" x:Name="pickerHasPowerDisconnect" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsHasPowerDisconnect, Mode=TwoWay}"/>
-                        <Label Grid.Row="2" Grid.Column="0" Text="Enter electric site key"/>
-                        <Label Grid.Row="2" Grid.Column="1" Text="3rd party comms"/>
-                        <Label Grid.Row="2" Grid.Column="2" Text="Enter Comms provider"/>
-                        <local:Dropdown Grid.Row="3" Grid.Column="0" ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedElectSiteKey, Mode=TwoWay}"/>
-                        <local:Dropdown Grid.Row="3" Grid.Column="1" ItemsSource="{Binding YesNo}" SelectedItem="{Binding Is3rdComms, Mode=TwoWay}"/>
-                        <local:BorderEntry Grid.Row="3"  Grid.Column="2" Text="{Binding CommsProvider, Mode=TwoWay}"/>
-                    </Grid>
-
-                    <Label Text="Enter UDS owner"/>
-                    <local:BorderEntry Text="{Binding UDSOwner, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
-                    <Label Text="Building Classification"/>
-                    <Picker ItemsSource="{Binding BuildingTypeList}" ItemDisplayBinding="{Binding TYPE_DESC}" 
-                                SelectedItem="{Binding SelectedBuilding, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
-
+                    <local:BorderEntry Text="{Binding SiteName, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>-->
+                    <Label Text="Enter serial number" />
+                    <local:BorderEntry Text="{Binding SerialNumber,Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>                    
                     <Grid ColumnDefinitions="*,*" RowDefinitions="0.1*,0.2*,0.2*,0.2*,0.2*,0.2*">
                         <Label Text="Choose a roadway"/>
                         <Label Grid.Column="1" IsVisible="{Binding IsSearchingRoadway}" />
@@ -81,9 +57,34 @@
                     <Picker  ItemsSource="{Binding TravelDirectionList}" ItemDisplayBinding="{Binding CompassDirDesc}"
                                 SelectedItem="{Binding SelectedOrientation, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
 
+                    <!--<Label Text="Enter Postal Code" HorizontalOptions="Start"/>
+                    <local:BorderEntry Text="{Binding PostalCode, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>-->
 
+                    <Grid Padding="0,5,10,5" RowDefinitions="*,*,*,*" ColumnDefinitions="*,*,*">
+                        <Label Grid.Row="0" Grid.Column="0"  Text="Lane closure required"/>
+                        <Label Grid.Row="0" Grid.Column="1" Text="Enter the dot disctrict"/>
+                        <Label Grid.Row="0" Grid.Column="2" Text="Has Power disconnect"/>
+                        <local:Dropdown Grid.Row="1" Grid.Column="0" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsLaneClosure, Mode=TwoWay}"/>
+                        <local:Dropdown Grid.Row="1" Grid.Column="1" 
+                                            ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedDistrict, Mode=TwoWay}" />
+                        <local:Dropdown Grid.Row="1" Grid.Column="2" x:Name="pickerHasPowerDisconnect" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsHasPowerDisconnect, Mode=TwoWay}"/>
+                        <Label Grid.Row="2" Grid.Column="0" Text="Enter electric site key"/>
+                        <Label Grid.Row="2" Grid.Column="1" Text="3rd party comms"/>
+                        <Label Grid.Row="2" Grid.Column="2" Text="Enter Comms provider"/>
+                        <local:Dropdown Grid.Row="3" Grid.Column="0" ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedElectSiteKey, Mode=TwoWay}"/>
+                        <local:Dropdown Grid.Row="3" Grid.Column="1" ItemsSource="{Binding YesNo}" SelectedItem="{Binding Is3rdComms, Mode=TwoWay}"/>
+                        <local:BorderEntry Grid.Row="3"  Grid.Column="2" Text="{Binding CommsProvider, Mode=TwoWay}"/>
+                    </Grid>
+
+                    <Label Text="Enter Site Street Address" HorizontalOptions="Start"/>
+                    <local:BorderEntry Text="{Binding StreetAddress, Mode=TwoWay}"  HorizontalOptions="FillAndExpand"/>                    
+                    <Label Text="Enter UDS owner"/>
+                    <local:BorderEntry Text="{Binding UDSOwner, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
+                    <!--<Label Text="Building Classification"/>
+                    <Picker ItemsSource="{Binding BuildingTypeList}" ItemDisplayBinding="{Binding TYPE_DESC}" 
+                                SelectedItem="{Binding SelectedBuilding, Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
                     <Label Text="Material"/>
-                        <Picker  ItemsSource="{Binding MaterialCodeList}" ItemDisplayBinding="{Binding CodeDescription}"
+                    <Picker  ItemsSource="{Binding MaterialCodeList}" ItemDisplayBinding="{Binding CodeDescription}"
                                  SelectedItem="{Binding SelectedMatCode,Mode=TwoWay}"
                             HorizontalOptions="FillAndExpand"/>
                     <Label Text="Mounting"/>
@@ -96,9 +97,9 @@
                         <Label Grid.Row="0" Grid.Column="0"  Text="Enter Height"/>
                         <Label Grid.Row="0" Grid.Column="1" Text="Enter Depth"/>
                         <Label Grid.Row="0" Grid.Column="2" Text="Enter Width"/>
-                        <local:BorderEntry Grid.Row="1" Grid.Column="0" Text="{Binding Height, Mode=TwoWay}"/>
-                        <local:BorderEntry Grid.Row="1" Grid.Column="1" Text="{Binding Depth, Mode=TwoWay}"/>
-                        <local:BorderEntry Grid.Row="1" Grid.Column="2" Text="{Binding Width, Mode=TwoWay}"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="0" Text="{Binding Height, Mode=OneWay}"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="1" Text="{Binding Depth, Mode=OneWay}"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="2" Text="{Binding Width, Mode=OneWay}"/>
                     </Grid>
 
                     <Label Text="Filter Type"/>
@@ -115,10 +116,44 @@
                                         ItemsSource="{Binding RackCount}" SelectedItem="{Binding SelectedRackCount, Mode=TwoWay}"/>
                         <local:Dropdown Grid.Row="1" Grid.Column="1"
                                         ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedKeyCode, Mode=TwoWay}"/>
+                    </Grid>-->
+
+                    <Grid ColumnDefinitions="*,*" RowDefinitions="0.1*,0.2*,0.2*,0.2*,0.2*,0.2*">
+
+                        <Label Text="Manufacturer"/>
+                        <Label Grid.Column="1" IsVisible="{Binding IsSearching}" />
+                        <local:BorderEntry Grid.Row="1" Text="{Binding SearchManufacturer, Mode=TwoWay}" Placeholder="type manufacturer" PlaceholderColor="aqua"/>
+                        <ListView  Grid.Row="2" Grid.RowSpan="4" ItemsSource="{Binding ManufacturerList}" SelectedItem="{Binding SelectedManuf, Mode=TwoWay}"                     
+                      BackgroundColor="LightGray" IsVisible="{Binding IsSearching}" >
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextCell Text="{Binding ManufName}"  />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                        <Label Grid.Column="1" Text="Model"/>
+                        <Picker Grid.Column="1" Grid.Row="1" Title="Select model" ItemsSource="{Binding ModelDetailList}" 
+                            ItemDisplayBinding="{Binding ModelNumber}"
+                                 SelectedItem="{Binding SelectedModelDetail, Mode=TwoWay}"
+                             HorizontalOptions="FillAndExpand" />
                     </Grid>
 
-                    <Label Text="Enter serial number" />
-                    <local:BorderEntry Text="{Binding SerialNumber,Mode=TwoWay}" HorizontalOptions="FillAndExpand"/>
+
+                    <local:BorderColorEntry Text="{Binding SelectedModelDetail.ModelDescription}"/>
+                    <Grid Padding="0,5,10,5" RowDefinitions="0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="*,*,*">
+                        <Label Grid.Row="0" Grid.Column="0"  Text="Height"/>
+                        <Label Grid.Row="0" Grid.Column="1" Text="Depth"/>
+                        <Label Grid.Row="0" Grid.Column="2" Text="Width"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="0" Text="{Binding SelectedModelDetail.height}" IsEnabled="False"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="1" Text="{Binding SelectedModelDetail.depth}" IsEnabled="False"/>
+                        <local:BorderEntry Grid.Row="1" Grid.Column="2" Text="{Binding SelectedModelDetail.width}" IsEnabled="False"/>
+
+                        <Label Grid.Row="2" Grid.Column="0"  Text="KIPS"/>
+                        <Label Grid.Row="2" Grid.Column="1" Text="Diameter"/>
+                        <local:BorderEntry Grid.Row="3" Grid.Column="0" Text="{Binding KIPS}" />
+                        <local:BorderEntry Grid.Row="3" Grid.Column="1" Text="{Binding Diameter}" />
+
+                    </Grid>
 
                     <Label Text="Enter manufactured" />
                     <DatePicker HorizontalOptions="FillAndExpand" Date="{Binding Manufactured, Mode=TwoWay}"/>
@@ -128,12 +163,14 @@
                     <Label Text="Enter notes and comments"/>
                     <Editor Text="{Binding Notes,Mode=TwoWay}" Placeholder="Enter notes here" 
                                 HorizontalOptions="FillAndExpand" MaxLength="250"   />
+                    <Label Text="Owner or Customer" HorizontalOptions="Start"/>
+                    <local:BorderColorEntry IsReadOnly="True" Text="{Binding OwnerName}"   HorizontalOptions="FillAndExpand"/>
 
-                    <Grid Padding="0,5,10,5" RowDefinitions="0.5*,*,0.5*,*" ColumnDefinitions="*,*,*">
-                        <Label Grid.Row="0" Grid.Column="0" Text="Have a sun shield"/>
+                    <Grid Padding="0,5,10,5" RowDefinitions="0.1*,0.2*,0.1*,0.2*" ColumnDefinitions="*,*,*">
+                        <Label Grid.Row="0" Grid.Column="0" Text="Is Splice Vault?"/>
                         <Label Grid.Row="0" Grid.Column="1" Text="Has Ground Rod"/>
                         <Label Grid.Row="0" Grid.Column="2" Text="Has Key"/>
-                        <local:Dropdown Grid.Row="1" Grid.Column="0" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsHaveSunShield}"/>
+                        <local:Dropdown Grid.Row="1" Grid.Column="0" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsSpliceVault}"/>
                         <local:Dropdown Grid.Row="1" Grid.Column="1" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsHasGround}"/>
                         <local:Dropdown Grid.Row="1" Grid.Column="2" 
                                             ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsHasKey}"/>
@@ -141,12 +178,6 @@
                         <local:Dropdown Grid.Row="3" Grid.Column="0" 
                                             IsVisible="{Binding IsKeyTypeDisplay}" 
                                             ItemsSource="{Binding DotDistrict}" SelectedItem="{Binding SelectedKeyType}" />
-                        <Label Grid.Row="4" Grid.Column="0" Text="Direction of Travel"/>
-                        <Label Grid.Row="4" Grid.Column="1" Text="Is site in a clear Zone?"/>
-                        <Label Grid.Row="4" Grid.Column="2" Text="Bucket Truck"/>
-                        <local:Dropdown Grid.Row="5" Grid.Column="0"/>
-                        <local:Dropdown Grid.Row="5" Grid.Column="1" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsSiteClearZone}"/>
-                        <local:Dropdown Grid.Row="5" Grid.Column="2" ItemsSource="{Binding YesNo}" SelectedItem="{Binding IsBucketTruck}"/>
                     </Grid>
 
                     <Button Text="Record Ducts" IsEnabled="False" HorizontalOptions="FillAndExpand" Command="{Binding ShowDuctPageCommand}"/>
