--- a/FTCollectorApp/View/Utils/CameraViewPage.xaml
+++ b/FTCollectorApp/View/Utils/CameraViewPage.xaml
@@ -164,13 +164,22 @@
                             Toggled="FrontCameraSwitch_Toggled" />
                 <Label Text="Front camera" />
             </StackLayout>-->
-            
-            <ImageButton Source="cam_white.png" 
+
+        <ImageButton Source="cam_white.png" IsEnabled="{Binding IsEnableBtn}"
                          x:Name="doCameraThings"
                 BackgroundColor="Transparent"
                 AbsoluteLayout.LayoutFlags="PositionProportional"  
                 AbsoluteLayout.LayoutBounds=".95,.95,80,80" 
                 Clicked="DoCameraThings_Clicked" />
+        <StackLayout IsVisible="{Binding IsBusy}" Padding="12"
+                 AbsoluteLayout.LayoutFlags="PositionProportional"
+                 AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+
+            <ActivityIndicator IsRunning="{Binding IsBusy}" Color ="{StaticResource blueColor}"/>
+
+            <Label Text="Uploading..." HorizontalOptions="Center" TextColor="White"/>
+
+        </StackLayout>
 
     </AbsoluteLayout>
 </pages:BasePage>
